<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RadioFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/rQuestionLbl"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/q5" />

    <RadioGroup
        android:id="@+id/rGroup"
        android:layout_width="match_parent"
        android:layout_height="148dp">

        <RadioButton
            android:id="@+id/rBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/true1" />

        <RadioButton
            android:id="@+id/rBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/false1" />
        </RadioGroup>

        <Button
            android:id="@+id/rSubmitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/submit" />


    <TextView
        android:id="@+id/rCorrectLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>